--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     </nav>
 
     <section class="container">
-      <div class="row align-items-center">
-        <div class="col-md-8 col-sm-12 order-md-1 order-sm-2 order-2">
+      <div class="row align-items-center gap-1">
+        <div class="col-md-7 col-sm-12 order-md-1 order-sm-2 order-2">
           <h1 class="title fw-bold mb-4">Make<br>
             remote work</h1>
           <p class="col-md-7 col-sm-12 mb-3 fw-bold">
